--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,59 +1,25 @@
-<h1> Hello World </h1>
-<h1> {{ message }} </h1>
-<h1> {{ title }} </h1>
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Welcome to the best Movie Review website </title>
-        {% endif %}
-        {% import 'macros.html' as macro%}
+{% import 'macros.html' as macro%}
 
-    </head>
     <body>
  <!-- Popular movie section  -->
- <h3> Popular Movies</h3>
- <ul>
-    {% for popular_movie in popular %}
-        <li>{{ popular_movie.title}}</li>
-    {% endfor %}
-</ul>
+ <h3> general news</h3>
 
-<!-- Upcoming movie  -->
-<h3> Upcoming Movies </h3>
+    <ul>
+         {{ macro.displayNewsList(popular)}}
+        </ul>
+
+<h3> business</h3>
 <ul>
-   {% for upcoming_movie in upcoming %}
-       <li>{{ upcoming_movie.title}}</li>
-   {% endfor %}
+    {{ macro.displayNewsList(upcoming)}}
 </ul>
-<!-- Now showing movie -->
-<h3>Now Showing</h3>
+
+<h3>sports</h3>
 <ul>
-   {% for now_showing_movie in now_showing %}
-       <li>{{ now_showing_movie.title}}</li>
-   {% endfor %}
+    {{ macro.displayNewsList(now_showing)}}
 </ul>
 
 
-        <!-- Popular movie -->
-        <h3> Popular Movies</h3>
-        <ul>
-            {{ macro.displayMovieList(popular)}}
-        </ul>
-        <!-- Upcoming movie  -->
-        <h3> Upcoming Movies </h3>
-        <ul>
-            {{ macro.displayMovieList(upcoming)}}
-        </ul>
-        <!-- Now showing movie -->
-        <h3>Now Showing</h3>
-        <ul>
-            {{ macro.displayMovieList(now_showing)}}
-        </ul>
-
+       
 
 
 
