--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
-{% import 'macros.html' as macro%}
 
+{% extends 'base.html'%}
+{% import 'macros.html' as macro%}
     <body>
  <!-- Popular movie section  -->
  <h3> general news</h3>
