added some in html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,9 @@
-
+<!-- {% import 'macros.html' as macro%} -->
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
     <body>
+     {% block content %}
+ 
  <!-- Popular movie section  -->
  <h3> general news</h3>
 
@@ -18,11 +20,7 @@
 <ul>
     {{ macro.displayNewsList(now_showing)}}
 </ul>
-
-
-       
-
-
+{% endblock%}
 
 
     </body>
