--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,6 +1,23 @@
 {% macro displayNewsList(source_list) %}
 
     {% for source in source_list %}
+
+
+
+
+    <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
+        <img src="{{ movie.poster }}" alt="{{ movie.title }} poster" class="img-responsive">
+        <li class="text-center">
+            <a href="/movie/{{movie.id}}">
+                {{ movie.title|truncate(10)}}</a>
+        </li>
+    </div>
+
+
+
+
+    
+
         <li>{{ source.name}}</li>
     {% endfor %}
 
