--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,24 +1,24 @@
 {% macro displayNewsList(source_list) %}
 
-    {% for source in source_list %}
+    {% for article in source_list %}
 
 
 
 
-    <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
-        <img src="{{ movie.poster }}" alt="{{ movie.title }} poster" class="img-responsive">
+    <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 article-card">
+        <!-- <img src="{{ article.poster }}" alt="{{ article.title }} poster" class="img-responsive"> -->
         <li class="text-center">
-            <a href="/movie/{{movie.id}}">
-                {{ movie.title|truncate(10)}}</a>
+            <a href="/article/{{article.id}}">
+                {{ article.name}}</a>
         </li>
     </div>
 
 
 
 
-    
 
-        <li>{{ source.name}}</li>
+
+        <!-- <li>{{ article.name}}</li> -->
     {% endfor %}
 
 {% endmacro %}
