--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -1,6 +1,10 @@
 <h1> NewsHighlight {{ id }} </h1>
 
-{% extends 'base.html'%}
+{% extends 'bootstrap/base.html'%}
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='index.css')}}">
+{% endblock %}
 <!-- Content block -->
 {% block content %}
 <div class="container">
