--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,10 @@
 <!-- {% import 'macros.html' as macro%} -->
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='index.css')}}">
+{% endblock %}
     <body>
      {% block content %}
  
