added h1 in html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 <!-- {% import 'macros.html' as macro%} -->
+<h1> NewsHighlight {{ id }} </h1>
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 {% block styles%}
